--- a/src/styles/car.css
+++ b/src/styles/car.css
@@ -1,3 +1,7 @@
+
+
+
+
 .compra {
     background-color: #DAA520;
     display: flex;
@@ -7,6 +11,13 @@
     flex-wrap: wrap;
     width: 100%;
   }
+  #figure-cbu{
+    width: 100%;
+  }
+  #figure-cbu img{
+    width: 100%;
+  }
+  
   
   .galeria {
     display: grid;
@@ -14,28 +25,65 @@
     grid-template-columns: repeat(3, minmax(200px, 1fr));
     gap: 2rem;
   }
-  
+  #secc-scroll {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-height: 7rem;
+    overflow-y: auto;
+    padding: .6rem;
+    background-color: rgb(255, 205, 89);
+    border: solid .2rem rgba(37, 115, 4, 0.806);
+    border-radius: .7rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  #pedido-orden{
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    border-bottom:dotted .2rem rgb(161, 0, 0) ;
+    font-weight: 800;
+    background-color: #f6a559;
+    padding-left: .5rem;
+    width: 100%;
+  }
   .header-carrito{
    background-color: antiquewhite;
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 9;
    height: 8vh;
+   position: absolute;
+   position: fixed;
   }
   
   .card {
    display: flex;
    flex-direction: column;
+   
    justify-content: space-between;
+   align-items: center;
+   align-content: center;
+   justify-content: flex-start;
    padding: 2rem;
    background-color: #FF8C00;
    border-radius: 10px;
+   flex-wrap: wrap;
    box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
   }
   
   .card button {
    align-self: center;
+  }
+  #subir-foto{
+    width: 80%;
+    padding: .8rem;
+    background-color: violet;
+   
+  
   }
   
   .carrito {
@@ -43,14 +91,23 @@
    flex-direction: column;
    position: absolute;
    position: fixed;
-   top: 1;
-   right: 0;
+   top: 15%;
+   right: 5%;
    justify-content: center;
    align-items: center;
    padding: .5rem;
    border: red solid 5px;
    background: rgb(186, 147, 92);
    z-index:10; 
+  }
+  #btn-confirmar{
+    padding: .7rem;
+    font-size: 1rem;
+    background-color: black;
+    color: whitesmoke;
+    font-weight: 800;
+    border-radius: .4rem;
+    border: solid white;
   }
 
   .item-carrito {
@@ -61,6 +118,11 @@
   }
   .boton-carrito{
     z-index: 15;
+    top: 10%;
+   right: 5%;
+    position: absolute;
+    position: fixed;
+    margin-bottom: 1rem;
   }
   #btn-precio{
     background-color: rgb(0, 220, 0);
@@ -86,4 +148,82 @@
     padding: 4px;
     font-weight: 700;
     border-radius: 5px;
+  }
+  @media (min-width: 400px) {
+  .compra {
+      padding: 20px;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+  }
+  .galeria{
+      display: flex;
+      flex-direction: column;
+      width: 80%;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+  }
+  .card {
+      
+      
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      justify-items: center;
+
+  }
+  .card figure {
+    width: 80%;
+  }
+  .card figure img {
+    width: 80%;
+  }
+  
+  
+
+}
+  @media (min-width: 900px) {
+    .verificacion {
+        padding: 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+  
+    }
+    .galeria{
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .card {
+        
+        
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+  
+    }
+    .card figure {
+      width: 80%;
+    }
+    .card figure img {
+      width: 80%;
+    }
+    
+    
+  
   }
