--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -12,18 +12,63 @@ font-size: 2.9rem;
 text-align: flex-start;
 
 }
-
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 .estado-pendiente {
     background-color: red;
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
     padding: 10px;
     border-radius: 10px;
 }
+#btn-check{
+    border-radius: .6rem;
+    border: solid .3rem darkgreen;
+    background-color: rgb(0, 237, 0);
+    box-shadow: 1rem 2rem 1rem 2rem rgb(255, 255, 255);
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+    font-weight: 700;
+    color: white;
+
+}
+#btn-check:hover{
+    border-radius: .6rem;
+    border: solid .3rem darkgreen  ;
+    background-color: rgb(0, 74, 0);
+    box-shadow: 0 rgb(255, 255, 255);
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+    font-weight: 700;
+    color: rgb(159, 158, 158);
+
+}
+
 
 .estado-confirmado {
-    background-color: green;
+    background-color: rgba(36, 128, 0, 0.599) ;
     color: white;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
     border-radius: 10px;
     border: 10px solid #ccc;
     /* background-image: url(../img/check.png); */
@@ -59,13 +104,15 @@ text-align: flex-start;
         flex-direction: column;
         width: 95%;
         justify-content: space-between;
+        justify-items: center;
     }
     .espera{
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         width: 95%;
-        justify-content: space-between;    }
+        justify-content: space-evenly; 
+       }
     .espera article{
         width: 80%;
     }
@@ -133,7 +180,6 @@ text-align: flex-start;
         display: flex;
         flex-direction: row;
         width: 100%;
-        background-color: violet;
         flex-wrap: wrap;
         justify-content: space-evenly;
     }
@@ -147,7 +193,6 @@ text-align: flex-start;
         align-items: center;
         justify-content: center;
         justify-items: center;
-        background-color: rgb(79, 73, 79);
 
     }
     .detalles .pedido-orden{
@@ -172,18 +217,22 @@ text-align: flex-start;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
+        justify-items: center;
+        justify-self: center;
         justify-content: space-between;
-        background-color: rgb(170, 238, 130);
+        align-content: center;
+        align-items: center;
+
 
     }
     .espera article{
         width: 80%;
-                background-color: rgb(130, 227, 238);
-
+        margin-top: 2rem;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
+        align-content: center;
         justify-content: center;
         justify-items: center;
     }
