--- a/src/styles/car.css
+++ b/src/styles/car.css
@@ -3,7 +3,7 @@
 
 
 .compra {
-    background-color: #DAA520;
+    background-color: #191918;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,10 +69,17 @@
    align-content: center;
    justify-content: flex-start;
    padding: 2rem;
-   background-color: #FF8C00;
+   /* background-color: #cf944c; */
+   background: linear-gradient(#f01410b5, rgba(255, 255, 36),  rgba(246, 255, 0, 0.596), rgb(97, 52, 52) );
+   border: solid 4px rgb(163, 9, 9);
+
    border-radius: 10px;
    flex-wrap: wrap;
-   box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+   box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.1);
+  }
+  .card h2{
+    font-size: 1.4rem;
+    font-weight: 700;
   }
   
   .card button {
@@ -91,17 +98,23 @@
    flex-direction: column;
    position: absolute;
    position: fixed;
-   top: 15%;
+   top: 18%;
+   
    right: 5%;
+   width: 30%;
    justify-content: center;
    align-items: center;
    padding: .5rem;
-   border: red solid 5px;
-   background: rgb(186, 147, 92);
+   border:   dotted rgb(255, 255, 67) 6px;
+   background: rgba(0, 0, 0, 0.469);
+   background: linear-gradient(#f01410b5, rgba(255, 146, 29, 0.596), rgba(246, 246, 3, 0.856), rgb(255, 55, 0) );
+
+   
+   border-radius: 12%;
    z-index:10; 
   }
   #btn-confirmar{
-    padding: .7rem;
+    padding: .5rem;
     font-size: 1rem;
     background-color: black;
     color: whitesmoke;
@@ -110,19 +123,37 @@
     border: solid white;
   }
 
-  .item-carrito {
-    background-color: greenyellow;
+  .item-carrito, #total {
+    background-color: rgba(0, 0, 0, 0.732);
+    font-weight: 800;
+    border-radius: .4rem;
+    color: rgb(6, 0, 41);
+    width: 96%;
     font-weight: 800;
    display: flex;
+   text-align: center;
+   align-items: center;
+   color: white;
+
+   font-size: 1.4rem;
+   padding: .4rem;
+   justify-content: center;
    justify-content: space-between;
   }
   .boton-carrito{
     z-index: 15;
-    top: 10%;
+    top: 9%;
    right: 5%;
     position: absolute;
     position: fixed;
     margin-bottom: 1rem;
+    padding: .7rem;
+    font-size: 1rem;
+    background-color: black;
+    color: whitesmoke;
+    font-weight: 800;
+    border-radius: .4rem;
+    border: solid white;
   }
   #btn-precio{
     background-color: rgb(0, 220, 0);
